simple shader and texture working

--- a/sdl open gl test/sdl open gl test.vcxproj
+++ b/sdl open gl test/sdl open gl test.vcxproj
@@ -125,11 +125,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="BasicTexture.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Playing.cpp" />
     <ClCompile Include="SDLDisplay.cpp" />
+    <ClCompile Include="ShaderLoader.cpp" />
+    <ClCompile Include="ShaderProgram.cpp" />
+    <ClCompile Include="SimpleShader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -137,6 +141,17 @@
     <ClInclude Include="Model.h" />
     <ClInclude Include="Playing.h" />
     <ClInclude Include="SDLDisplay.h" />
+    <ClInclude Include="ShaderLoader.h" />
+    <ClInclude Include="ShaderProgram.h" />
+    <ClInclude Include="SimpleShader.h" />
+    <ClInclude Include="BasicTexture.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Simple_Fragment.glsl" />
+    <None Include="Simple_Vertex.glsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Textures\grass.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
